# FastCV

./: CMakeLists.txt  Dockerfile  README.md
docs/: sift.md
src/: getImgKeypoints.cpp  getImgKeypoints.cu  main.cu
src/lib/: CMakeLists.txt  matrix_mul.cu  matrix_mul.cuh  sift.cu  sift.cuh
src/utils/: CMakeLists.txt  utils.cpp  utils.h
